<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Page9q7"
    android:gravity="center"
    android:paddingTop="5dp"
    android:paddingBottom="5dp"
    android:orientation="vertical"
    android:background="@color/white"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:background="@null"
            android:layout_gravity="left">
            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:src="@drawable/q7_copy_shape"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:gravity="right"
            android:orientation="vertical"
            >

            <ImageButton
                android:id="@+id/buttonNew"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:contentDescription="@string/start_new"
                android:src="@drawable/new_pic" />

            <ImageButton
                android:id="@+id/buttonBrush"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:contentDescription="@string/brush"
                android:src="@drawable/brush" />

            <ImageButton
                android:id="@+id/buttonErase"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:contentDescription="@string/erase"
                android:src="@drawable/eraser" />


        </LinearLayout>

    </LinearLayout>


    <bp.DrawingView
        android:id="@+id/drawing"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="3dp"
        android:layout_weight="5"
        android:background="@color/whiteSheed"
        />

    <!-- Next Button & Collor Pallet -->
    <LinearLayout
        android:id="@+id/paint_colors1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal" >
        <!-- Color pallet -->
        <LinearLayout
            android:id="@+id/paint_colors"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:gravity="left|center"
            android:orientation="horizontal" >

            <ImageButton
                android:layout_width="@dimen/large_brush"
                android:layout_height="@dimen/large_brush"
                android:layout_margin="2dp"
                android:background="@color/skin"
                android:contentDescription="@string/paint"
                android:onClick="paintClicked"
                android:src="@drawable/pallet"
                android:tag="@color/skin" />

            <ImageButton
                android:layout_width="@dimen/large_brush"
                android:layout_height="@dimen/large_brush"
                android:layout_margin="2dp"
                android:background="@color/black"
                android:contentDescription="@string/paint"
                android:onClick="paintClicked"
                android:src="@drawable/pallet"
                android:tag="@color/black" />

            <ImageButton
                android:layout_width="@dimen/large_brush"
                android:layout_height="@dimen/large_brush"
                android:layout_margin="2dp"
                android:background="@color/red"
                android:contentDescription="@string/paint"
                android:onClick="paintClicked"
                android:src="@drawable/pallet"
                android:tag="@color/red" />

            <ImageButton
                android:layout_width="@dimen/large_brush"
                android:layout_height="@dimen/large_brush"
                android:layout_margin="2dp"
                android:background="@color/green"
                android:contentDescription="@string/paint"
                android:onClick="paintClicked"
                android:src="@drawable/pallet"
                android:tag="@color/green" />

            <ImageButton
                android:layout_width="@dimen/large_brush"
                android:layout_height="@dimen/large_brush"
                android:layout_margin="2dp"
                android:background="@color/blue"
                android:contentDescription="@string/paint"
                android:onClick="paintClicked"
                android:src="@drawable/pallet"
                android:tag="@color/blue" />

            <ImageButton
                android:layout_width="@dimen/large_brush"
                android:layout_height="@dimen/large_brush"
                android:layout_margin="2dp"
                android:background="@color/yellow"
                android:contentDescription="@string/paint"
                android:onClick="paintClicked"
                android:src="@drawable/pallet"
                android:tag="@color/yellow" />

        </LinearLayout>

        <!-- Next Button  -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:gravity="right"
            android:layout_height="wrap_content">
            <ImageButton
                android:id="@+id/nextBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:foregroundGravity="right"
                android:src="@drawable/ic_arrow_forward_black_24dp"
                android:layout_gravity="right"/>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>