<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="5dp">

        <!-- Full Name -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/hint_name" />
        </android.support.design.widget.TextInputLayout>

        <!-- DOB  -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_dob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_dob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:focusable="false"
                android:hint="@string/hint_DOB" />
        </android.support.design.widget.TextInputLayout>

        <!-- How far did you get in school? -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_far"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_far"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="How far did you get in school?" />
        </android.support.design.widget.TextInputLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/betweenTwoQuestion"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Choose Gender" />

                <RadioGroup
                    android:id="@+id/radioGroup1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView1"
                    android:layout_centerHorizontal="true"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioButton1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Male" />


                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@+id/radioGroup1"
                        android:layout_below="@+id/radioGroup1"
                        android:text="Female" />


                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="I am "
                    />
                <Spinner
                    android:id="@+id/spinnerType"
                    android:layout_width="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:layout_height="match_parent">

                </Spinner>
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="@dimen/betweenTwoQuestion"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Have you had any problems with memory or thinking? " />

            <RadioGroup
                android:id="@+id/radioThinkingProblem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView1"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Yes" />


                <RadioButton
                    android:layout_alignLeft="@+id/radio2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/radioGroup1"
                    android:text="Only Occasionally" />
                <RadioButton
                    android:layout_alignLeft="@+id/radio3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/radioGroup1"
                    android:text="No" />


            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="@dimen/betweenTwoQuestion"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="Have you had any blood relatives that have had problems with memory or thinking?" />

            <RadioGroup
                android:id="@+id/radioThinkingProblemRelative"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView1"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Yes" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="No" />


            </RadioGroup>
        </LinearLayout>



        <!--Radio for balance problem-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/betweenTwoQuestion"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center"
                android:text="Do you have balance problem?" />
            <RadioGroup
                android:id="@+id/radioBalance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:gravity="right"
                android:layout_below="@+id/textView1"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right|center"
                    android:text="Yes" />


                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right|center"
                    android:text="No" />


            </RadioGroup>

        </LinearLayout>

        <!--Visible only if select Yes in spinner balance problem-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_balance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_balance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_balance_problem"
                android:maxLines="1"
                android:singleLine="false"
                android:visibility="visible" />
        </android.support.design.widget.TextInputLayout>



        <!--Have you ever had a stroke?-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="@dimen/betweenTwoQuestion">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Have you ever had a stroke?" />

            <RadioGroup
                android:id="@+id/radioStroke"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView1"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Major" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Minor" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="No" />


            </RadioGroup>
        </LinearLayout>


        <!--Do you currently feel sad or depressed? -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="@dimen/betweenTwoQuestion">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Do you currently feel sad or depressed?" />

            <RadioGroup
                android:id="@+id/radioSad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView1"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Yes" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Only Occasionally" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="No" />


            </RadioGroup>
        </LinearLayout>





        <!--Have you had any change in your personality? -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/betweenTwoQuestion"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center"
                android:text="Have you had any change \nin your personality?" />
            <RadioGroup
                android:id="@+id/radioPersonality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:gravity="right"
                android:layout_below="@+id/textView1"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right|center"
                    android:text="Yes" />


                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right|center"
                    android:text="No" />


            </RadioGroup>

        </LinearLayout>

        <!--Visible only if select Yes in spinner balance problem-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_personality"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_personality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:maxLines="1"
                android:visibility="visible"
                android:hint="@string/hint_persnality_specifiy_changes" />
        </android.support.design.widget.TextInputLayout>


        <ImageButton
            android:onClick="next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="80dp"
            android:background="@null"
            android:src="@drawable/ic_arrow_forward_black_24dp"
            android:layout_gravity="right"/>

    </LinearLayout>




</ScrollView>